--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/springbootdb
 spring.datasource.username=postgres
-spring.datasource.password=postgres@XhnkY3TCCC
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
